<resources>
    <string name="app_name" translatable="false">TangUtang</string>
    <string name="save_label">Save</string>
    <string name="field_required">This field is required</string>
    <string name="borrow_label">Borrow</string>
    <string name="lent_label">Lent</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="borrow_lent_label">Borrow/Lent</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="name_label">Name</string>
    <string name="amount">Amount</string>
    <string name="due_date_label">Due Date</string>
    <string name="note_label">Catatan</string>
    <string name="paid_off_label">Paid off</string>
    <string name="delete_label">Delete</string>
    <string name="data_empty_label">No Record</string>
    <string name="unpaid_label">Unpaid</string>
    <string name="delete_message">Do you want to delete this item?</string>
    <string name="item_deleted_message">Item deleted successfully</string>
    <string name="edit_item_label">Edit Record</string>
    <string name="add_new_label">Add New Record</string>
</resources>